[package]
name = "benchmark_from_crates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.17.7", features = ["rayon"] }
crates-index = { version = "3.4", features = ["git", "git-https", "parallel"] }
rayon = "1.9"
semver = { version = "1.0.24", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.6"
internment = { version = "0.8.0", features = ["serde"] }
semver-pubgrub = { git = "https://github.com/pubgrub-rs/semver-pubgrub", features = ["serde"] }
pubgrub = { git = "https://github.com/pubgrub-rs/pubgrub", branch = "dev", features = ["serde"] }
itertools = "0.12.1"
csv = "1.3.0"
cargo = { git = "https://github.com/rust-lang/cargo", branch = "master" }
anyhow = "1.0.86"
either = "1.13.0"
clap = { version = "4.5.17", features = ["derive"] }
rustc-hash = "2.0.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
time = "0.3.37"

[profile.profiling]
inherits = "release"
strip = false
debug = "full"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc = "0.1"
